--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="main.js"></script>
+    <script src="feedhenry.js"></script>
   </head>
   <body>
-    <p>Advanced FeedHenry Webapp Template</p>
+    <p>Should be replaced. Advanced FeedHenry Webapp Template</p>
   </body>
 </html>
